[package]
name = "coloring"
version = "0.2.0"
authors = ["André Lins <andrelucas01@hotmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "Convert values to color simply and securely."
documentation = "https://docs.rs/coloring"
keywords = ["convert", "color", "string"]
repository = "https://github.com/andrelmlins/coloring"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
